# MudRock

./: CMakeLists.txt  README.md  mudrock.cpp  mudrock.h
Petrophysics/: CMakeLists.txt  petrophysics.cpp  petrophysics.h
Petrophysics/tests/: CMakeLists.txt  pp_test.cpp
tests/: CMakeLists.txt  mr_test.cpp
